--- a/hw9.tex
+++ b/hw9.tex
@@ -277,10 +277,8 @@ $S(G)$ takes an input of a graph $G$ and return the min-cut $(S, \Bar{S})$.
 Suppose $Opt(G)$ finds the smallest capacity value of any $s-t$ cut, denote it as $C'$. In order to find out if there is an $s-t$ cut $(S, \Bar{S})$ with capacity at most $C$, we need to compare $C$ and $C'$. If $C' \leqslant C$, then our answer for \textbf{Decision} problem is "yes". If $C' > C$, then our answer for \textbf{Decision} problem is "no" because the capacity can never be less than $C'$. Since in $D$, we use $Opt(G)$ once and do a $\mathcal{O}(1)$ comparison, DECISION is polynomial time reducible to OPTIMIZATION 
 
 \subsubsection*{2. OPTIMIZATION is polynomial time reducible to DECISION}
-
-[Proof required]
   
-Suppose $D$ returns if an $s-t$ cut $(S,\Bar{S})$ with capacity at most $C$ exists. We can first find out the largest possible capacity $C^+$ by summing the capacity of all the positive edges. Similarly, we can find out the smallest possible capacity $C^-$ by summing the capacity of all edges with negative capacities. We can have an array to store the information for capacities from $C^-$ to $C^+$, which is $\mathcal{O}(n)$ with total $C^+-C^-+1$ elements. With start index $0$ and ending index $C^+-C^-$, we can implement binary-search-like algorithm to determine the smallest capacity. Notice that if we find a capacity value $C$ where $D(C)$ is true but $D(C-1)$ is false, we find the smallest capacity of any $s-t$ cut because no $s-t$ cut has lower capacity than $C$. 
+We can first find out the largest possible capacity $C^+$ by summing the capacity of all the positive edges. Similarly, we can find out the smallest possible capacity $C^-$ by summing the capacity of all edges with negative capacities. We can have an array to store the information for capacities from $C^-$ to $C^+$, which is $\mathcal{O}(n)$ with total $C^+-C^-+1$ elements. With starting index $0$ and ending index $C^+-C^-$. Then can implement binary-search-like algorithm to determine the smallest capacity. Notice that if we find a capacity value $C$ where $D(C)$ is true but $D(C-1)$ is false, we find the smallest capacity of any $s-t$ cut because no $s-t$ cut has lower capacity than $C$. 
 
 \textbf{The running time:} Calculating $C^-$ and $C^+$ requires $\mathcal{O}(|E|)$. Notice that the running time is $\mathcal{O}(log n)$ for binary search. Since $C^++|C^-|+1 = \mathcal{O}(n)$, there are $\mathcal{O}(2^n)$ elements in terms of the number of bits. Therefore, the binary search which takes $\mathcal{O}(log{2^n}) = \mathcal{O}(n)$ is linear in terms of numbers of bit. Notice that the arithmetic operations in the algorithm take $\mathcal{O}(1)$, therefore the running time of this $Opt(G)$ with $D$ is weakly polynomial. [The algorithm is below]
 
@@ -300,6 +298,8 @@ return R
 		\end{lstlisting} 
 \end{proof}
 
+The algorithm aims to find the smallest $C$ where $D(C)$ is true. Similar to binary search, we strictly decrease the range of possible smallest $C$ on line 6 and 7 and keep searching on the range that contains the smallest $C$. Therefore the algorithm terminates whenever $R==L$, meaning the range now becomes one element. Thus, it always return the correct smallest $C$ S.T. $D(C)$ is true.
+
 Therefore,   OPTIMIZATION is polynomial time reducible to DECISION.
 Now that \textbf{Optimization problem} and \textbf{Decision problem} can be mutually polynomial-time reducible, they are polynomial-time equivalent.
 \end{proof}
@@ -310,7 +310,15 @@ Now that \textbf{Optimization problem} and \textbf{Decision problem} can be mutu
 \subsubsection*{1. OPTIMIZATION is polynomial time reducible to SEARCH}
 Suppose $S(G)$ finds the min-cut $(S,\Bar{S})$ for the graph $G$ that minimizes $c(S,\Bar{S})$. By the definition of min-cut, the value of $c(S,\Bar{S})$ is already the smallest capacity value of any $s-t$ cut. Therefore, since in $Opt(G)$ we find min-cut $(S,\Bar{S})$ using $S(G)$ and calculate the capacity $c(S,\Bar{S})$ in $\mathcal{O}(|E|)$,  OPTIMIZATION is polynomial time reducible to SEARCH.
 
-\subsubsection*{2. SEARCH is polynomial time reducible to OPTIMIZATION} 
+\subsubsection*{2. SEARCH is polynomial time reducible to OPTIMIZATION}
+% \textbf{2. SEARCH is polynomial time reducible to OPTIMIZATION}
+
+For graph $G$, $Opt(G)$ gives us the minimum cut capacities value for some to-be-discovered $s-t$ cut $(S, \Bar{S})$, denoted as $C$. Notice that it is possible that we have multiple minimum cuts with same capacities value. In the following discussion, the graph after operation of \texttt{set} $c_e = \infty$ or \texttt{construct an edge} $e(s,v)$ with capacity $c_e = \infty$ will be denoted as $G'$ for convenience. Also, the operation on edge $(s,v)$ refers to either make the capacity to $\infty$ or add a new edge with $\infty$ capacity for a vertex $v\in V, v\neq s, t$ for convenience.
+
+\textbf{Observation:} Focusing on a cut $(S,\Bar{S})$ with capacity $Opt(G) = C$.
+
+If a node $v\in S$, the operation on $(s,v)$ not change the capacity of $(S,\Bar{S})$. If a node $v \in \Bar{S}$, the operation increase the capacity of original cut $(S,\Bar{S})$ since the cut allows more flow to pass through, meaning the new cut for $(S,\Bar{S})$ will be larger than $C$. Thus, if the capacity of this cut become larger after the operation, $v \in \Bar{S}$ for this cut. Therefore, we can focus on the value of $Opt(G)$ which finds the min cut capacity of $G$ to find the actual min cut. To deal with multiple min cut candidates, keeping the infinite capacity edges (line 13-14) ensures that all future OPTIMIZATION are dependent on $(s,v)$ where $c_{(s,v)}=\infty$, so $v$ finds the nodes in the right cut. 
+
 \begin{proof}[Algorithm]{}
 		\renewcommand{\qedsymbol}{}
 		Algorithm $S(G)$ with "API" $Opt(G)$
@@ -336,11 +344,9 @@ return ~$(S, \Bar{S})$~
     
 		\end{lstlisting} 
 \end{proof}
-For graph $G$, $Opt(G)$ gives us the minimum cut capacities value for some to-be-discovered $s-t$ cut $(S, \Bar{S})$, denoted as $C$. Notice that it is possible that we have multiple minimum cuts with same capacities value. In the following, the graph after operation of \texttt{set} $c_e = \infty$ or \texttt{construct an edge} $e(s,v)$ with capacity $c_e = \infty$ will be denoted as $G'$ for convenience. Also, the operation on edge $(s,v)$ refers to either make the capacity to $\infty$ or add a new edge with $\infty$ capacity for a vertex $v\in V, v\neq s, t$ for convenience.
 
-\textbf{Observation:} Focusing on a cut $(S,\Bar{S})$ with capacity $Opt(G) = C$.
 
-If a node $v\in S$, the operation on $(s,v)$ not change the capacity of $(S,\Bar{S})$. If a node $v \in \Bar{S}$, the operation increase the capacity of original cut $(S,\Bar{S})$ since the cut allows more flow to pass through, meaning the new cut for $(S,\Bar{S})$ will be larger than $C$. Thus, if the capacity of this cut become larger after the operation, $v \in \Bar{S}$ for this cut. Therefore, we can focus on the value of $Opt(G)$ which finds the min cut capacity of $G$ to find the actual min cut. To deal with multiple min cut candidates, keeping the infinite capacity edges (line 13-14) ensures that all future OPTIMIZATION are dependent on $(s,v)$ where $c_{(s,v)}=\infty$, so $v$ finds the nodes in the right cut. 
+
 
 (1) There exists a unique min cut $(S,\Bar{S})$ with capacity $C$ to SEARCH.
 
@@ -382,7 +388,6 @@ The certifier of this problem needs (1) loop through all $k$ possible partitions
 \section*{Problem3}
 
 \textbf{(a)}
-
 Given an integer $C$, is there a way to move all boxes from their start positions to the desired end position in at most $C$ steps?
 
 \textbf{(b)}
@@ -394,7 +399,7 @@ A proposed sequence of move
 (2)  Follow the sequence of move, check whether or not all boxes are put into the end position.
 
 \textbf{(d)}
-The size of certificate (the steps of move) is not necessarily polynomial. It could be exponential.
+The size of certificate (the steps of move) is not necessarily polynomial. It could be exponential. Therefore, this may not satisfy the definition of NP problem. As discussed in lectures: if the correct answer for $x$ is "Yes", then there exists a $y$ (called "certificate") of length at most $|y| \leqslant r(|x|)$ such that $B(x,y)$ answers "Yes". Nevertheless, a sequence of move (certificate) is not necessarily bounded by polynomial time with respect to the size of board. Thus, it isn't sufficient to show SOKOBAN is in NP.
 
 
 \section*{Problem4}
