--- a/hw9.tex
+++ b/hw9.tex
@@ -350,15 +350,15 @@ return ~$(S, \Bar{S})$~
 
 (1) There exists a unique min cut $(S,\Bar{S})$ with capacity $C$ to SEARCH.
 
-As observed above, if the capacity of a cut doesn't change after operation on $(s,v)$, we can say that $v\in S$ for that cut. Since there exists a unique min cut for $G$, $Opt(G)$ will return the capacities of that cut. If the operation on $(s,v)$ doesn't change the capacity of that unique min cut and thus $Opt(G) = Opt(G')$, we can say that $v\in S$. Nevertheless, if the cut capacity increases, $Opt(G) < Opt(G')$ because every other cut are strictly larger than original cut $(S,\Bar{S})$ and the cut capacity increase. Thus, we can say that $v \in \Bar{S}$ for the cut. Thus the output of $Opt(G)$ is the min cut $(S,\Bar{S})$.
+\qquad As observed above, if the $Opt(G')=Opt(G)$ after operation on $(s,v)$, we can say that $v\in S$ for that cut. If the cut capacity of $(S,\Bar{S})$ increases, $Opt(G) < Opt(G')$ because every other cut are strictly larger than original cut $(S,\Bar{S})$ and the cut capacity increase. Thus, we can say that $v \in \Bar{S}$ for the cut. Thus the output of $Opt(G)$ is the min cut $(S,\Bar{S})$.
 
 (2) There exists multiple min $s-t$ cut candidates $(S_1,\Bar{S_1}), ... , (S_k,\Bar{S_k})$ to SEARCH. In this part of discussion, $i,j \in \{1,...,k\}, i\neq j, k \geqslant 1$. I'll discuss the correctness of algorithm in two situations.
 
-For a node $v$ in $G$, if the operation on $(s,v)$ leads to $Opt(G') \geqslant Opt(G)$, we can say that $\forall (S_i, \Bar{S_i}): v \in \Bar{S_i}$ because the operation allows more flow to pass through all $k$ potential min cuts. Since $\forall (S_i, \Bar{S_i}): v\in \Bar{S_i}$, we add $v$ to $\Bar{S}$ (line 16). If the operation on $(s,v)$ doesn't change $Opt(G)$, this means that $v$ is in $S_i$ some other valid min cut $(S_i,\Bar{S_i})$. We add such $v$ to $S$ (line 14). By loop through all nodes (all cuts at the same time), we have $S = \bigcup_{i=1}^{k}S_i$ and $\Bar{S} = \bigcup_{i=1}^{k}\Bar{S_i}$. Therefore, by proving that the union of min cuts are still min cut we can prove our output $(S,\Bar{S})$ is a min cut.
+\qquad For a node $v$ in $G$, if the operation on $(s,v)$ leads to $Opt(G') \geqslant Opt(G)$, we can say that $\forall (S_i, \Bar{S_i}): v \in \Bar{S_i}$ because the operation allows more flow to pass through all $k$ potential min cuts. Since $\forall (S_i, \Bar{S_i}): v\in \Bar{S_i}$, we add $v$ to $\Bar{S}$ (line 16). If the operation on $(s,v)$ doesn't change $Opt(G)$, this means that $v$ is in $S_i$ some other valid min cut $(S_i,\Bar{S_i})$. We add such $v$ to $S$ (line 14). By loop through all nodes (all cuts at the same time), we have $S = \bigcup_{i=1}^{k}S_i$ and $\Bar{S} = \bigcup_{i=1}^{k}\Bar{S_i}$. Therefore, by proving that the union of min cuts are still min cut we can prove our output $(S,\Bar{S})$ is a min cut.
 
 \textbf{Corollary: } A cut $(X,\Bar{X})$ is minimal if and only if every maximal flow $f$ saturates all arcs of $(X,\Bar{X})$ whereas all arcs of $(X,\Bar{X})$ are flowless with respect to f. [As discussed in lecture and stated by Ford and Fulkerson]
 
-Therefore, for two min cuts $(S_i,\Bar{S_i})$ and $(S_j, \Bar{S_j})$, we can prove that their union is still a min cut. Every outflow edge from $S_i$ and $S_j$ is filled. Therefore, every outflow edge from $S_i \cup S_j$ comes from $S_i$ or $S_j$. Since min cut $\Leftrightarrow$ edges crossing the cut are filled, $(S_i \cup S_j, \Bar{S_i} \cup \Bar{S_j})$ is also a min cut. Therefore, $(S,\Bar{S}) = (\bigcup_{i=1}^{k}{S_i},\bigcup_{i=1}^{k}\Bar{S_i})$ is also the min cut. This proves that the output of $S(G)$ with "API" $Opt(G)$ is indeed the min cut.
+\qquad Therefore, for two min cuts $(S_i,\Bar{S_i})$ and $(S_j, \Bar{S_j})$, we can prove that their union is still a min cut. Every outflow edge from $S_i$ and $S_j$ is filled. Therefore, every outflow edge from $S_i \cup S_j$ comes from $S_i$ or $S_j$. Since min cut $\Leftrightarrow$ edges crossing the cut are filled, $(S_i \cup S_j, \Bar{S_i} \cup \Bar{S_j})$ is also a min cut. Therefore, $(S,\Bar{S}) = (\bigcup_{i=1}^{k}{S_i},\bigcup_{i=1}^{k}\Bar{S_i})$ is also the min cut. This proves that the output of $S(G)$ with "API" $Opt(G)$ is indeed the min cut.
 
 Since we call $Opt(G)$ API $\mathcal{O}(|E|)$ times, we can say that SEARCH is polynomial time reducible to OPTIMIZATION. Now that OPTIMIZATION is also polynomial time reducible to SEARCH, we concludes that OPTIMIZATION and SEARCH are polynomial-equivalent.
 
@@ -377,11 +377,11 @@ In the same scenario, we can convert the problem into a "natural" decision probl
 The certifier of this problem needs (1) calculate the total score for each team, it requires $\mathcal{O}(n)$ for looping all $n$ students. (2) loop through all $k$ groups and store the $\mathbf{\max}$ and $\mathbf{\min}$ in $\mathcal{O}(k)$ (3) compute the difference $\mathbf{\max} - \mathbf{\min}$ (4) then compare $\Delta$ with the skill difference. If $\Delta < \mathbf{\max} - \mathbf{\min}$, output "no", else "yes". Since the certifier requires $\mathcal{O}(n+k)$, and comparison between two integers is easy, the converted decision problem is in \textbf{NP}.
 
 \subsubsection*{Problem b}
-In the same scenario, we can convert the problem into a "natural" decision problem: "given $k$ partitions $(S_i, \Bar{S_i}), i = 1, . . . , k$ of nodes, and a cut capacity bound $C \geqslant 0$, is there a way to get a set $E$ of undirected edges S.T. for all partitions the max number of edges $\leqslant C$.
+In the same scenario, we can convert the problem into a "natural" decision problem: "given $k$ partitions $(S_i, \Bar{S_i}), i = 1, . . . , k$ of nodes, and a cut capacity bound $C \geqslant 0$, is there a way to get a set $E$ of undirected edges S.T. for all partitions the max number of crossing edges $\leqslant C$ and $|E| \geqslant L$, where $L\geqslant 0$ is an integer.
 
 \textbf{Certificate:} a set $E$ of undirected edges on $G$. ($\mathcal{O}(|V|^2)$ polynomial)
 
-\textbf{Certifier:} check if for all partitions $(S_i,\Bar{S_i})$ the number of edges it partitions in $G=(V,E)$ is at most $C$
+\textbf{Certifier:} check if for all partitions $(S_i,\Bar{S_i})$ the number of edges it partitions in $G=(V,E)$ is at most $C$ and $|E|$ is at least $L$
 
 The certifier of this problem needs (1) loop through all $k$ possible partitions, it requires $\mathcal{O}(k)$ times of iterations (2) check the number of edges crossing for each partition $(S_i, \Bar{S_i})$ ($u \in S_i, v_\in \Bar{S_i}, (u,v)$), each of which requires $\mathcal{O}(|E|)$. Since the certifier requires $\mathcal{O}(k|E|)$, and the comparison between two values. If all partitions has less than $C$ edges then "yes" else "no". The converted decision problem is in \textbf{NP}.
 
@@ -408,19 +408,23 @@ The size of certificate (the steps of move) is not necessarily polynomial. It co
 \textbf{Certificate:} $(P, \hat{x}, \hat{t}, \hat{z})$ and binary string $y$
 
 \textbf{Certifier:} 
-(1) check whether or not $P(\hat{x},y)$ terminates in $|\hat{t}|$ steps
 
-(2) check whether or not $|y| \leqslant |\hat{z}|$
+(1) check whether or not $|y| \leqslant |\hat{z}|$
+
+(2) check whether or not $P(\hat{x},y)$ terminates in $|\hat{t}|$ steps
+
 
 (3) run $P(\hat{x},y)$ for $|\hat{t}|$ steps. If $P(\hat{x},y)$ terminates in $|\hat{t}|$ steps, output $P(\hat{x},y)$. Else, output "no"
 
+Therefore we show that CERTIFICATION is in NP.
+
 \subsection*{Problem b}
 
-\begin{proof}{CERTIFICATION is NP-hard}
+\begin{proof}{CERTIFICATION is NP-complete}
 
 Every problem in NP $\leqslant_p$ CERTIFICATION. We need to build a reduction $f$ from $X \in NP$ to CERTIFICATION.
 
-Since $X\in NP$, we have a efficient certifier $B(x,y)$ that terminates in $q(|x|,|y|)$ steps, where $|y| \leqslant r(|x|)$ ($q, r$ are some polynomial functions).
+Since $X\in NP$, we have a efficient certifier $B(x,y)$ that terminates in $q(|x|+|y|)$ steps, where $|y| \leqslant r(|x|)$ ($q, r$ are some polynomial functions), $x$ is some input, and $y$ is a certificate in polynomial size.
 
 Input: A problem $X\in NP$.
 
@@ -430,36 +434,32 @@ Output: $(P, \hat{x}, \hat{t}, \hat{z})$.
 
 \qquad $\hat{t}$ is a binary string of length $q(|x|+|y|)$.
 
-\qquad $\hat{x} = x$. 
+\qquad $\hat{x} = x$. $P=B$.
 
+Therefore, we have $(B, x, \hat{t}, \hat{z})$ as output. Then, call CERTIFICATION$(B, x, \hat{t}, \hat{z})$ to find if there exists a certificate $y$ that is polynomial in length of input $x$ to $X$ S.T. the certifier $B$ for $X\in NP$ return "Yes" in at most $|\hat{t}|=q(|x|+|y|)$ times. This concludes the reduction.
 
-\qquad $P=B$.
+For a reduction function $f$, it needs to satisfy the following:
 
-Therefore, we have $(B, x, \hat{t}, \hat{z})$ as output.
+ 1. "Yes" instances map to "Yes" instances.
 
-$f$ needs to satisfy the following:
+\qquad If correct answer for $x$ is "Yes" (there is a $y$ S.T. $|y|\leqslant r(|x|)$ and $B(x,y)$ return "Yes"), then $P(\hat{x},y)$ returns "Yes".
 
-\qquad 1. "Yes" instances map to "Yes" instances.
+ 2. "No" instances map to "No" instances.
 
-\qquad If the correct answer for $x$ is "Yes" [there exists a certificate $y$ of length at most $|y| <= r(|x|)$ such that $B(x,y)$ answers "yes"], then there exists a binary string $y$ of length at most $|y| \leqslant |\hat{z}|$ S.T. $(P, \hat{x}, y)$ terminates in at most $|\hat{t}|$ steps and return "yes".
+\qquad If correct answer for $x$ is "No" (there is no such a $y$ S.T. $B(x,y)$ returns "Yes), then $P(\hat{x},y)$ returns "No".
 
-
-\qquad 2. "No" instances map to "No" instances.
-
-\qquad If the correct answer for $x$ is "No",[for every certificate $y$, $B(x,y)$ answers "No"], then is no a binary string $y$ S.T. $P(\hat{x},y)$ return "Yes".
-
-\qquad 3. $f$ runs in polynomial time.
+3. $f$ runs in polynomial time.
 
 Here are proofs for properties listed above:
 
-\qquad 1: If correct answer for $x$ is "Yes", then there is a binary string $y$ of length at most $|y| \leqslant r(|x|) = |\hat{z}|$ S.T. $B(x,y)$ return "Yes" in $|\hat{t}| = q(|x|+|y|)$ [properties discussed in lectures]. Therefore correct answer for $(B, x, \hat{t}, \hat{z})$ is "Yes" now that $P(\hat{x},y) = B(x,y)$ terminates in $|\hat{t}| = q(|x|+|y|)$ steps.
+\qquad 1: If correct answer for $x$ is "Yes", then there is a binary string $y$ of length at most $|y| \leqslant r(|x|) = |\hat{z}|$ S.T. $B(x,y)$ return "Yes" in $|\hat{t}| = q(|x|+|y|)$ steps [definition of NP discussed in lectures]. Therefore correct answer for $(B, x, \hat{t}, \hat{z})$ is "Yes" now that $P(\hat{x},y) = B(x,y)$ terminates in $|\hat{t}| = q(|x|+|y|)$ steps.
 
 \qquad 2: If the correct answer for $x$ is "no", then there is no binary string $y$ of length at most $|\hat{z}|$ S.T. $B(x,y)$ returns "yes" in at most $|\hat{t}|$ steps. Since there is no such a binary string $y$ that makes $P(\hat{x},y) = B(x,y)$ return "Yes, "No" is the correct answer for $(B,x,\hat{t},\hat{z})$
 
 
-\qquad 3: $|$binary string$|$ is polynomial. Adding $B$ takes $\mathcal{O}(1)$ time. Therefore, $f$ runs in polynomial time.
+\qquad 3: $|$binary string$|$ is polynomial in length. Adding $B$ takes $\mathcal{O}(1)$ time. Therefore, $f$ runs in polynomial time.
 
-
+Therefore, it suffices to say that $X\in NP, X \leqslant_p$ CERTIFICATION
 
 
 
